--- a/public/css/footer.css
+++ b/public/css/footer.css
@@ -1,51 +1,101 @@
 /* Début footer */
 
-.bg-grey {
-	background: #292929;
-}
+.footer-dark {
+	padding:50px 0;
+	color:#f0f9ff;
+	background-color:#282d32;
+  }
+  
+  .footer-dark h3 {
+	margin-top:0;
+	margin-bottom:12px;
+	font-weight:bold;
+	font-size:16px;
+  }
+  
+  .footer-dark ul {
+	padding:0;
+	list-style:none;
+	line-height:1.6;
+	font-size:14px;
+	margin-bottom:0;
+  }
+  
+  .footer-dark ul a {
+	color:inherit;
+	text-decoration:none;
+	opacity:0.6;
+  }
+  
+  .footer-dark ul a:hover {
+	opacity:0.8;
+  }
+  
+  @media (max-width:767px) {
+	.footer-dark .item:not(.social) {
+	  text-align:center;
+	  padding-bottom:20px;
+	}
+  }
+  
+  .footer-dark .item.text {
+	margin-bottom:36px;
+  }
+  
+  @media (max-width:767px) {
+	.footer-dark .item.text {
+	  margin-bottom:0;
+	}
+  }
+  
+  .footer-dark .item.text p {
+	opacity:0.6;
+	margin-bottom:0;
+  }
+  
+  .footer-dark .item.social {
+	text-align:center;
+  }
+  
+  @media (max-width:991px) {
+	.footer-dark .item.social {
+	  text-align:center;
+	  margin-top:20px;
+	}
+  }
+  
+  .footer-dark .item.social > a {
+	font-size:20px;
+	width:36px;
+	height:36px;
+	line-height:36px;
+	display:inline-block;
+	text-align:center;
+	border-radius:50%;
+	box-shadow:0 0 0 1px rgba(255,255,255,0.4);
+	margin:0 8px;
+	color:#fff;
+	opacity:0.75;
+  }
+  
+  .footer-dark .item.social > a:hover {
+	opacity:0.9;
+  }
+  
+  .footer-dark .copyright {
+	text-align:center;
+	padding-top:24px;
+	opacity:0.3;
+	font-size:13px;
+	margin-bottom:0;
+  }
 
-.logo{
-	width: 100px;
-	height: 125px;
-	max-width: 100%;
-	margin-left: 175px;
-	margin-top: 50px;
-	margin-right: 90px;
-}
-
-footer {
-	color: grey;
-}
-
-/* footer p, a {
-	font-size: 12px;
-	font-family: 'Roboto', sans-serif;
-} */
-
-footer h6 {
-	font-family: 'Playfair Display', serif;
-	margin-bottom: 40px;
-	position: relative;
-	text-decoration: none;
-}
-
-footer h6:after {
-	position: absolute;
-	content: "";
-	background:#74cbe4;
-	width: 12%;
-	height: 1px;
-	left: 0;
-	bottom: -20px;
-}
-
-
-.block {
-	border-right: 1px solid #74cbe4;
-	height: 60%;
-	padding-right: 20px;
-	text-decoration: none;
-}
+  .logoFooter {
+	  max-width: 100%;
+	  width: 100px;
+	  height: 125px;
+	  float: right;
+  }
 
 
 /* Fin footer */
