--- a/views/layouts/footer.ejs
+++ b/views/layouts/footer.ejs
@@ -1,52 +1,39 @@
 <!-- Début Footer -->
 
-<footer id="footer" class="container-fluid bg-grey py-5">
-    <img class="logo" src="./img/logo.png" alt="logo" align=left>
-    <div class="container">
-        <div class="row">
-            <div class="col-md-6">
+    <div class="footer-dark">
+        <footer>
+            <div class="container">
                 <div class="row">
-                    <div class="col-md-6 ">
-                        <h6>No Brain No Gain</h6>
-                        <div class="block">
-                            <p>No Brain No Gain, le site de jeux intéractif en ligne</p>
-                            <p>Viens tester tes limites et te retourner le cerveau</p>
-                        </div>
+                    <div class="col-sm-6 col-md-3 item">
+                        <h3>Contact</h3>
+                        <ul>
+                            <li><a>IUT Paris Descartes</a></li>
+                            <li><a>143 Avenue de Versailles</a></li>
+                            <li><a>75016</a></li>
+                        </ul>
                     </div>
-                    <div class="col-md-6 px-4">
-                        <h6> Notre équipe</h6>
-                        <div class="block">
-                            <p>Nous sommes une équipe de 6 étudiants en 2èmes année de DUT informatique</p>
-                            <p>Ce site a été réalisé dans le cadre d'un projet de fin d'année</p>
-                        </div>
+                    <div class="col-sm-6 col-md-3 item">
+                        <h3>Équipe</h3>
+                        <ul>
+                            <li><a>Loïc LIM</a></li>
+                            <li><a>Vincent NGUYEN</a></li>
+                            <li><a>Bilal HAMICHE</a></li>
+                            <li><a>Aravindan COLBERT</a></li>
+                            <li><a>Tom BRUDER</a></li>
+                            <li><a>Victor VAKITOV</a></li>
+                        </ul>
                     </div>
-                </div>
+                    <div class="col-md-6 item text">
+                        <h3>No Brain No Gain</h3>
+                        <p>
+                            No Brain No Gain, le site de jeux intéractifs en ligne. Viens tester tes limites
+                             et te retourner le cerveau. Réalisé par une épique de 6 étudiants.
+                        </p>
+                        <img src="../img/logo.png" alt="logo" class="logoFooter">
+                    </div>
+                <p class="copyright">No Brain No Gain © 2021</p>
             </div>
-            <div class="col-md-6">
-                <div class="row">
-                    <div class="col-md-6 ">
-                        <h6>Auteurs</h6>
-                        <div class="block">
-                            <p>Loïc LIM<br>
-                            Vincent NGUYEN<br>
-                            Aravindan COLBERT<br>
-                            Bilal HAMICHE<br>
-                            Tom BRUDER<br>
-                            Victor VAKHITOV<br></p>
-                           </div>
-                    </div>
-                    <div class="col-md-6 px-4">
-                        <h6> Nos contacts</h6>
-                        <div class="block">
-                            <p>IUT Paris Descartes</p>
-                            <p>143 Avenue de Versailles</p>
-                            <p>75016</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
+        </footer>
     </div>
-</footer>
 
 <!-- Fin Footer -->
