--- a/views/home.ejs
+++ b/views/home.ejs
@@ -104,8 +104,8 @@
                     class="img-fluid card-img-top" id="frame">
                   <h5 class="subTitleG">Échecs</h5>
                   <p class="small text-muted mb-0" id="descriptG">
-                    Êtes-vous un stratège aguerri ? Imbattable ?<br> Venez nous le prouver
-                    avec le jeu de stratégie indémodable que sont les échecs, codé par Gautambajaj !
+                    Êtes-vous un stratège aguerri ? Imbattable ?<br>Venez nous le prouver
+                    avec le jeu de stratégie indémodable que sont les échecs, codé par Gautambajaj
                   </p>
                   <% if(isLoggedIn) { %>
                     <a href="/echecs"><button id="chessBtn" class="buttonGames"><span>Jouez !</span></button></a>
