--- a/views/home.ejs
+++ b/views/home.ejs
@@ -145,7 +145,7 @@
     <div class="end"></div>
 
     <div class="chart">
-      <img src="./img/logo.png" alt="logo" id="logoChart">
+      <a href="/"><img src="./img/logo.png" alt="logo" id="logoChart"></a>
       <h1 class="chartTitle">Ici le tableau des scores des meilleurs joueurs de No Brain No Gain</h1>
       <canvas id="chart"></canvas>
       <h1 class="chartTitle">Voici les jeux les plus joués sur No Brain No Gain !</h1>
