fix spelling mistakes

--- a/views/profil.ejs
+++ b/views/profil.ejs
@@ -50,7 +50,7 @@
             <div class="col-lg-7 col-md-10">
               <h1 class="display-2 text-white">Bonjour <%=user%>
               </h1>
-              <p class="text-white mt-0 mb-5">Tu te trouve sur ta page de profil. C'est ici que tu vas pouvoir retrouver
+              <p class="text-white mt-0 mb-5">Tu te trouves sur ta page de profil. C'est ici que tu vas pouvoir retrouver
                 tous tes scores et tes statistiques</p>
             </div>
           </div>
@@ -77,10 +77,7 @@
                 <div class="row">
                   <div class="col">
                     <div class="card-profile-stats d-flex justify-content-center mt-md-5">
-                      <div>
-                        <span class="heading">22</span>
-                        <span class="description">Friends</span>
-                      </div>
+                      <br>
                     </div>
                   </div>
                 </div>
@@ -152,7 +149,7 @@
     <!-- Début chart -->
 
     <div class="chart">
-      <h1 class="statsTitle">Voici tes stats petit joueur !</h1>
+      <h1 class="statsTitle">Voici tes stats, petit joueur !</h1>
       <canvas id="chartProfil"></canvas>
     </div>
 
