--- a/views/authentification.ejs
+++ b/views/authentification.ejs
@@ -58,12 +58,12 @@
                 <div class="overlay">
                     <div class="overlay-panel overlay-left">
                         <h1>Te revoilà !</h1>
-                        <p>Entre tes informations personnel pour te connecter</p>
+                        <p>Entre tes informations personnelles pour te connecter</p>
                         <button class="ghost" id="signIn">Se connecter</button>
                     </div>
                     <div class="overlay-panel overlay-right">
                         <h1>Bonjour petit joueur</h1>
-                        <p>Entre tes informations personnels et commence à jouer avec nous</p>
+                        <p>Entre tes informations personnelles et commence à jouer avec nous !</p>
                         <button class="ghost" id="signUp">Créer ton compte</button>
                     </div>
                 </div>
