--- a/views/home.ejs
+++ b/views/home.ejs
@@ -83,7 +83,7 @@
                     class="img-fluid card-img-top" id="frame">
                   <h5 class="subTitleG">Dames</h5>
                   <p class="small text-muted mb-0" id="descriptG">
-                    Venez vous relaxer de tout stress notre jeux de dames !<br>
+                    Venez vous relaxer de tout stress notre jeu de dames !<br>
                     codé par Nathanieslong
                   </p>
                   <% if(isLoggedIn) { %>
