--- a/views/layouts/footer.ejs
+++ b/views/layouts/footer.ejs
@@ -1,6 +1,6 @@
 <!-- Début Footer -->
 
-    <div class="footer-dark">
+    <div class="footer-dark" id="footer">
         <footer>
             <div class="container">
                 <div class="row">
