--- a/views/sudoku.ejs
+++ b/views/sudoku.ejs
@@ -32,10 +32,10 @@
 
 		<div class="sudokuContainer">
 			<div class="mistakeScreen">
-				<center class="mistakeText">Pffft. Looks like you made a mistake somewhere.</center>
+				<center class="mistakeText">Pffft. T'as fais une erreure quelque part.</center>
 			</div>
 			<div class="winScreen">
-				<center class="winText">You're a winner. That's pretty neat.</center>
+				<center class="winText">Gagné !</center>
 			</div>
 			<section id="sudokuPuzzle">
 				<div id='numPad'>
@@ -59,8 +59,8 @@
 				<center>
 					<h1 style="color: white; font-family: Rockwell;">25 points</h1>
 					<form id="formwrapper">
-						<span id="newGame" class="formbutton">Give me another</span>
-						<span id="solve" class="formbutton">Give up</span>
+						<span id="newGame" class="formbutton">J'en veux un autre</span>
+						<span id="solve" class="formbutton">Abandonner</span>
 					</form>
 				</center>
 				<table class="inner container" align="center" id="grid">
