--- a/views/home.ejs
+++ b/views/home.ejs
@@ -66,7 +66,7 @@
                     class="img-fluid card-img-top" id="frame">
                   <h5 class="subTitleG">Sudoku</h5>
                   <p class="small text-muted mb-0" id="descriptG">
-                    Vous aimez les chiffres ? <br> Battez tous les records avec le fameux sudoku
+                    Vous aimez les chiffres ? <br> Battez tous les records avec le fameux sudoku, codé par pocketjoso
                   </p>
                   <% if(isLoggedIn) { %>
                     <a href="/sudoku"><button id="sudokuBtn" class="buttonGames"><span>Jouez !</span></button></a>
