--- a/views/sudoku.ejs
+++ b/views/sudoku.ejs
@@ -58,6 +58,7 @@
 				</div>
 				<center>
 					<h1 style="color: white; font-family: Rockwell;">25 points</h1>
+					<h1 style="color: white; font-family: Rockwell;">Merci à pocketjoso pour ce jeu</h1>
 					<form id="formwrapper">
 						<span id="newGame" class="formbutton">J'en veux un autre</span>
 						<span id="solve" class="formbutton">Abandonner</span>
