--- a/public/css/gamesCSS/sudoku.css
+++ b/public/css/gamesCSS/sudoku.css
@@ -21,6 +21,7 @@ img.logo {
 	border-radius: 50px;
 	margin-top: 200px;
 	width: 800px;
+	margin-bottom: 50px;
 	margin-left: auto;
 	margin-right: auto;
 	padding-bottom: 50px;
