--- a/views/layouts/footer.ejs
+++ b/views/layouts/footer.ejs
@@ -7,20 +7,20 @@
                     <div class="col-sm-6 col-md-3 item">
                         <h3>Contact</h3>
                         <ul>
-                            <li><a>IUT Paris Descartes</a></li>
-                            <li><a>143 Avenue de Versailles</a></li>
-                            <li><a>75016</a></li>
+                            <li>IUT Paris Descartes</li>
+                            <li>143 Avenue de Versailles</li>
+                            <li>75016</li>
                         </ul>
                     </div>
                     <div class="col-sm-6 col-md-3 item">
                         <h3>Équipe</h3>
                         <ul>
-                            <li><a>Loïc LIM</a></li>
-                            <li><a>Vincent NGUYEN</a></li>
-                            <li><a>Bilal HAMICHE</a></li>
-                            <li><a>Aravindan COLBERT</a></li>
-                            <li><a>Tom BRUDER</a></li>
-                            <li><a>Victor VAKITOV</a></li>
+                            <li>Loïc LIM</li>
+                            <li>Vincent NGUYEN</li>
+                            <li>Bilal HAMICHE</li>
+                            <li>Aravindan COLBERT</li>
+                            <li>Tom BRUDER</li>
+                            <li>Victor VAKITOV</li>
                         </ul>
                     </div>
                     <div class="col-md-6 item text">
@@ -29,7 +29,7 @@
                             No Brain No Gain, le site de jeux intéractifs en ligne. Viens tester tes limites
                              et te retourner le cerveau. Réalisé par une épique de 6 étudiants.
                         </p>
-                        <img src="../img/logo.png" alt="logo" class="logoFooter">
+                        <img src="../img/logo.webp" alt="logo" class="logoFooter">
                     </div>
                 <p class="copyright">No Brain No Gain © 2021</p>
             </div>
