--- a/views/layouts/navbar.ejs
+++ b/views/layouts/navbar.ejs
@@ -2,7 +2,7 @@
 
 <nav id="nav" class="navbar navbar-expand-lg navbar-light fixed-top bgcolor">
   <div class="container">
-    <img class ="logoneon" src="./img/logoneon.png">
+    <img class ="logoneon" src="./img/logoneon.webp" alt="logo">
     <p class="alpha">NO BRAIN NO GAIN</p><button aria-controls="navbarSupportedContent" aria-expanded="false"
       aria-label="Toggle navigation" class="navbar-toggler" data-target="#navbarSupportedContent" data-toggle="collapse"
       type="button"><span class="navbar-toggler-icon"></span></button>
