--- a/views/profil.ejs
+++ b/views/profil.ejs
@@ -48,7 +48,7 @@
         <div class="container-fluid d-flex align-items-center">
           <div class="row">
             <div class="col-lg-7 col-md-10">
-              <h1 class="display-2 text-white">Bonjour <%=user%>
+              <h1 class="display-2 text-white" id="nomB">
               </h1>
               <p class="text-white mt-0 mb-5">Tu te trouves sur ta page de profil. C'est ici que tu vas pouvoir retrouver
                 tous tes scores et tes statistiques</p>
@@ -82,8 +82,8 @@
                   </div>
                 </div>
                 <div class="text-center">
-                  <h3>
-                    <%=user%>
+                  <h3 id="nomProfil">
+                    
                   </h3>
                   <hr class="my-4">
                   <p id="aboutMeSection2"></p>
