--- a/views/chess.ejs
+++ b/views/chess.ejs
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <title>No Brain No Gain</title>
 
-    <link rel="icon" type="image/png" href="./img/logo.png">
+    <link rel="icon" type="image/png" href="./img/logo.webp">
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css">
     <script type="text/javascript" src="./js/games/chess/chessAI.js"></script>
