--- a/views/dames.ejs
+++ b/views/dames.ejs
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <title>No Brain No Gain</title>
 
-    <link rel="icon" type="image/png" href="./img/logo.png">
+    <link rel="icon" type="image/png" href="./img/logo.webp">
 
     <link href="https://fonts.googleapis.com/css?family=Aldrich" rel="stylesheet">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
