--- a/views/sudoku.ejs
+++ b/views/sudoku.ejs
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>No Brain No Gain</title>
-	<link rel="icon" type="image/png" href="./img/logo.png">
+	<link rel="icon" type="image/png" href="./img/logo.webp">
 
 
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
