correct error syntax

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -63,7 +63,7 @@
 
               <!-- Gallery item -->
               <div class="col-xl col-lg-4 col-md-6 mb-4">
-                <div class="bg-white rounded shadow-sm"><img src="./img/jeux-images/sudoku.webP" alt="Sudoku"
+                <div class="bg-white rounded shadow-sm"><img src="./img/jeux-images/sudoku.webp" alt="Sudoku"
                     class="img-fluid card-img-top" id="frame">
                   <h5 class="subTitleG">Sudoku</h5>
                   <p class="small text-muted mb-0" id="descriptG">
