--- a/views/layouts/navbarDames.ejs
+++ b/views/layouts/navbarDames.ejs
@@ -2,7 +2,7 @@
 
 <nav id="navDames" class="navbarDames topfixed bgcolor">
     <div class="leftItems">
-        <a href="/"><img src="./img/logoneon.png" alt="logo" class="logoneon"></a>
+        <a href="/"><img src="./img/logoneon.webp" alt="logo" class="logoneon"></a>
         <a class="alpha" href="/">NO BRAIN NO GAIN</a>
     </div>
 
